sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: reassignment to val
	swap = 0;
             ^AlgBubbleSort1:4: error: reassignment to val
	while(swap=1){
                  ^AlgBubbleSort1:8: error: reassignment to val
			swap = 1;
                             ^